added celery and finished tests, passed tests for ratings
